Implement search based parser fetcher